# quantanalyzer

./: README.md  pyproject.toml
doc/: arq.drawio  org.md
quantanalyzer/: interfaces.py
quantanalyzer/backtest/: framework.py
tutorial/: aluno.py
